added some more Nanode pictures

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
       <a href="./index.html">> Home</a>
       <a href="./home/bio.html">> Bio</a>
       <a href="./home/contact.html">> Contact</a>
-      <p>Portfolio > Projects:</p>
+      <p>Projects:</p>
       <hr>
       <a href="./projects/reprap.html">> Reprap Opensource 3D Printer</a>
       <a href="./projects/animachine.html">> Animachine @Youin3D, Berlin</a>
@@ -51,7 +51,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
       <a href="./projects/ltfhc.html">> Electronic Medical Records</a>
       <a href="./projects/thinkfarm.html">> Sustainability Research</a>
       <a href="./projects/ose.html">> Open Source Ecology</a>
-      <p>Portfolio > Actions:</p>
+      <p>Actions:</p>
       <hr>
       <a href="./actions/ucloccupation.html">> UCL Occupation</a>
       <a href="./actions/occupylondon.html">> Occupy London Tech Team</a>
@@ -59,17 +59,17 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
       <a href="./actions/hurricanesandy.html">> Hurricane Hackers</a>
       <a href="./actions/fliehkraft.html">> Fliehkraft, Berlin</a>
       <a href="./actions/ecovillage.html">> Eco Village</a>
-      <p>Portfolio > Academia:</p>
+      <p>Academia:</p>
       <hr>
       <a href="./academia/ch.html">> Overview</a>
       <a href="./academia/durham.html">> About</a>
       <a href="./academia/mit.html">> Curriculum Vitae</a>
-      <p>Portfolio > Creative:</p>
+      <p>Creative:</p>
       <hr>
       <a href="./art/writing.html">> Writing</a>
       <a href="./art/artwork.html">> Artwork</a>
       <a href="./art/concepts.html">> Concepts & Design</a>
-      <p>Portfolio > Talks:</p>
+      <p>Talks:</p>
       <hr>
       <a href="./talks/ccc.html">> Assembly + Lightning Talk @CCC</a>
       <a href="./talks/pp_intl.html">> RW Society @PP Intl</a>
@@ -111,87 +111,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
     </div>
   </div>
 
-  <!-- The overlay -->
-  <div id="myNav" class="overlay">
-    <!-- Button to close the overlay navigation -->
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <!-- Overlay content -->
-    <div class="overlay-content">
-      <p>Home:</p>
-      <hr>
-      <a href="../index.html">> Home</a>
-      <a href="../home/bio.html">> Bio</a>
-      <a href="../home/contact.html">> Contact</a>
-      <p>Portfolio > Projects:</p>
-      <hr>
-      <a href="../projects/reprap.html">> Reprap Opensource 3D Printer</a>
-      <a href="../projects/animachine.html">> Animachine @Youin3D, Berlin</a>
-      <a href="../projects/buildingbanter.html">> Industrial Energy Monitoring</a>
-      <a href="../projects/classic4.html">> Medical Device Firmware</a>
-      <a href="../projects/nanode.html">> Nanode, DIY IoT Device</a>
-      <a href="../projects/ltfhc.html">> Electronic Medical Records</a>
-      <a href="../projects/thinkfarm.html">> Sustainability Research</a>
-      <a href="../projects/ose.html">> Open Source Ecology</a>
-      <p>Portfolio > Actions:</p>
-      <hr>
-      <a href="../actions/ucloccupation.html">> UCL Occupation</a>
-      <a href="../actions/occupylondon.html">> Occupy London Tech Team</a>
-      <a href="../actions/cryptoparty.html">> Cryptoparty London</a>
-      <a href="../actions/hurricanesandy.html">> Hurricane Hackers</a>
-      <a href="../actions/fliehkraft.html">> Fliehkraft, Berlin</a>
-      <a href="../actions/ecovillage.html">> Eco Village</a>
-      <p>Portfolio > Academia:</p>
-      <hr>
-      <a href="../academia/ch.html">> Secondary: Christ's Hospital</a>
-      <a href="../academia/durham.html">> Uni: Durham</a>
-      <a href="../academia/mit.html">> MIT Graduate App and Collab</a>
-      <p>Portfolio > Creative:</p>
-      <hr>
-      <a href="../art/writing.html">> Writing</a>
-      <a href="../art/artwork.html">> Artwork</a>
-      <a href="../art/concepts.html">> Concepts & Design</a>
-      <p>Portfolio > Talks:</p>
-      <hr>
-      <a href="../talks/ccc.html">> Assembly + Lightning Talk @CCC</a>
-      <a href="../talks/pp_intl.html">> RW Society @PP Intl</a>
-      <a href="../talks/fabrica.html">> Trust but Verify @Fabrica</a>
-      <a href="../talks/frontline.html">> Revolutionary Apps @Frontline Club</a>
-      <a href="../talks/talklist.html">> List: Talks</a>
-      <p>Lists of things I like:</p>
-      <hr>
-      <a href="../art/poetrylist.html">> Poetry</a>
-      <a href="../art/filmlist.html">> Film</a>
-      <a href="../art/booklist.html">> Books</a>
-      <a href="../art/musiclist.html">> Music</a>
-      <p>Service > Consulting</p>
-      <hr>
-      <a href="../service/engineering.html">> IT / Engineering</a>
-      <a href="../service/security.html">> Security</a>
-      <a href="../service/sustainability.html">> Sustainability</a>
-      <p>Service > Programming:</p>
-      <hr>
-      <a href="../service/programming.html">> Examples of My Work</a>
-      <p>Service > Webdev:</p>
-      <hr>
-      <a href="../service/web.html">> Webdesign and Development</a>
-      <a href="../service/web_examples.html">> Examples of My Work</a>
-      <a href="../service/web_feedback.html">> Client Feedback</a>
-      <p>Service > PC Repair</p>
-      <hr>
-      <a href="../service/onsite_repair.html">> Onsite Support</a>
-      <a href="../service/remote_repair.html">> Remote Support</a>
-      <a href="../service/repair_feedback.html">> Reviews</a>
-      <p>Service > Clients:</p>
-      <hr>
-      <a href="../service/current_clients.html">> Current Clients</a>
-      <a href="../service/previous_clients.html">> Previous Clients</a>
-      <p>Service > Personal:</p>
-      <hr>
-      <a href="../service/mentoring.html">> Mentoring</a>
-      <a href="../service/business_development.html">> Business Development</a>
-    </div>
-  </div>
-
+ 
   <!-- MAIN PAGE CONTENT -->
   <div id="main-content">
     <!-- PORTFOLIO HEADER -->
@@ -220,13 +140,13 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
     <!-- PROJECTS / MY WORK SECTION -->
     <div id="my-work-section">
       <!-- TODO - Change the subheader-text to whatever you want the Projects section header to say -->
-      <span class="subheader-text">Projects I have worked on:</span>
+      <span class="subheader-text">Projects:</span>
       <div class="projects-container">
         <div class="project-card">
           <img loading="lazy" src="./assets/images/animachine_2.jpeg" class="project-image">
           <div class="project-card-text-container">
             <div class="subheader-text project-title">#Animachine</div>
-            <div class="body-text project-card-text">Participative Digital Fabrication for Endangered Species Conservation.</div>
+            <div class="body-text project-card-text">Participative digital fabrication for endangered species conservation. Twitter actuated 3D printing in a custom display case installed in a shopping centre in central Berlin in order to engage supporters both physically and digitally to raise money to support Cat-Ba Langur conservation and protection.</div>
           </div>
           <a class="button" href="./projects/animachine.html">
             <span class="button-text">Read More</span>
@@ -236,8 +156,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
         <div class="project-card">
           <img loading="lazy" src="./assets/images/20140724_153555.jpg" class="project-image">
           <div class="subheader-text project-title">Electronic Medical Records</div>
-          <div class="body-text project-card-text">Solar-Powered HF Radio-Synchronised Electronic Medical Records and Communication Network Deployed in 'extremely remote' Health Clinics and Hospitals around Lake Tanganyika. <n /div>
-          </div>
+          <div class="body-text project-card-text">Designed, tested and built solar-powered HF radio-synchronised electronic medical records system and communication network deployed in 'extremely remote' health clinics and hospitals around Lake Tanganyika. </div>
           <a class="button" href="./projects/ltfhc.html">
             <span class="button-text">Read More</span>
             <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
@@ -254,6 +173,68 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
             <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
           </a>
         </div>
+
+        <div class="project-card">
+          <img loading="lazy" src="./assets/images/ose_backhoe.jpg" class="project-image">
+          <div class="project-card-text-container">
+            <div class="subheader-text project-title">Open Source Ecology</div>
+            <div class="body-text project-card-text">Designing open source hardware and machines, DIY industrial and agricultural processes.</div>
+          </div>
+          <a class="button" href="./projects/ose.html">
+            <span class="button-text">Read More</span>
+            <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
+          </a>
+        </div>
+        <div class="project-card">
+          <img loading="lazy" src="./assets/images/liebe_freiheit_alles.jpg" class="project-image">
+          <div class="project-card-text-container">
+            <div class="subheader-text project-title">Reprap</div>
+            <div class="body-text project-card-text">Open Source 3D printing. Multiple builds and community contributions to the popular RepRap project (REplicating RAPid prototyper).</div>
+          </div>
+          <a class="button" href="./projects/reprap.html">
+            <span class="button-text">Read More</span>
+            <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
+          </a>
+        </div>
+
+        <div class="project-card">
+          <img loading="lazy" src="./assets/images/XBee-2-mW.jpg" class="project-image">
+          <div class="project-card-text-container">
+            <div class="subheader-text project-title">Building Banter</div>
+            <div class="body-text project-card-text">Improving energy efficiency through ‘conversing’ with buildings and users in an engaging manner.</div>
+          </div>
+          <a class="button" href="./projects/buildingbanter.html">
+            <span class="button-text">Read More</span>
+            <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
+          </a>
+        </div>
+        <div class="project-card">
+          <img loading="lazy" src="./assets/images/classic4.jpg" class="project-image">
+          <div class="project-card-text-container">
+            <div class="subheader-text project-title">Classic 4</div>
+            <div class="body-text project-card-text">Electro Accupuncture / TENS Device. Classic 4 @ Harmony Medical. Languages: c, cpp, asm, python.</div>
+          </div>
+          <a class="button" href="./projects/classic4.html">
+            <span class="button-text">Read More</span>
+            <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
+          </a>
+        </div>
+        <div class="project-card">
+          <img loading="lazy" src="./assets/images/nanode.png" class="project-image">
+          <div class="project-card-text-container">
+            <div class="subheader-text project-title">Nanode</div>
+            <div class="body-text project-card-text">An open source Arduino-like board that has in-built web connectivity. Best Internet of Things Open Source Project 2011.</div>
+          </div>
+          <a class="button" href="./projects/nanode.html">
+            <span class="button-text">Read More</span>
+            <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
+          </a>
+        </div>
+      </div>
+      <!-- Actions Section -->
+      <span class="subheader-text">Actions:</span>
+      <div class="projects-container">
+
         <div class="project-card">
           <img loading="lazy" src="./assets/images/SAMBiOtechie.png" class="project-image">
           <div class="project-card-text-container">
@@ -265,35 +246,14 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
             <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
           </a>
         </div>
-        <div class="project-card">
-          <img loading="lazy" src="./assets/images/20140726_175001.jpg" class="project-image">
-          <div class="project-card-text-container">
-            <div class="subheader-text project-title">Writings</div>
-            <div class="body-text project-card-text">My mind to your mind, my thoughts to your thoughts. Heart through mind.</div>
-          </div>
-          <a class="button" href="./art/writing.html">
-            <span class="button-text">Read More</span>
-            <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
-          </a>
-        </div>
-        <div class="project-card">
-          <img loading="lazy" src="./assets/images/20140726_175001.jpg" class="project-image">
-          <div class="project-card-text-container">
-            <div class="subheader-text project-title">Readings</div>
-            <div class="body-text project-card-text">The thoughts of others, encoded in words, are shared here</div>
-          </div>
-          <a class="button" href="./art/booklist.html">
-            <span class="button-text">Read More</span>
-            <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
-          </a>
-        </div>
+
         <div class="project-card">
           <img loading="lazy" src="./assets/images/occupy_6.jpg" class="project-image">
           <div class="project-card-text-container">
             <div class="subheader-text project-title">Occupy London: Tech Team</div>
             <div class="body-text project-card-text">Occupy London was a political movement in London.</div>
           </div>
-          <a class="button" href="./project-pages/project-occupylondon.html">
+          <a class="button" href="./actions/occupylondon.html">
             <span class="button-text">Read More</span>
             <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
           </a>
@@ -304,7 +264,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
             <div class="subheader-text project-title">Cryptoparty London</div>
             <div class="body-text project-card-text">Grassroots, global endeavour to introduce the basics of practical cryptography such as the Tor, PGP, OTR, disk encryption and VPNs to the general public.</div>
           </div>
-          <a class="button" href="./project-pages/project-cryptoparty.html">
+          <a class="button" href="./actions/cryptoparty.html">
             <span class="button-text">Read More</span>
             <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
           </a>
@@ -315,45 +275,36 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
             <div class="subheader-text project-title">UCLOccupation</div>
             <div class="body-text project-card-text">Bootstrapped the tech team at a student occupation (which became a hub of a national movement) together with other fellow nerds, students and volunteers.</div>
           </div>
-          <a class="button" href="./project-pages/project-ucloccupation.html">
+          <a class="button" href="./actions/ucloccupation.html">
             <span class="button-text">Read More</span>
             <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
           </a>
         </div>
-        <div class="project-card">
-          <img loading="lazy" src="./assets/images/XBee-2-mW.jpg" class="project-image">
+                <div class="project-card">
+          <img loading="lazy" src="./assets/images/fliehkraft.jpg" class="project-image">
           <div class="project-card-text-container">
-            <div class="subheader-text project-title">Building Banter</div>
-            <div class="body-text project-card-text">Improving energy efficiency through ‘conversing’ with buildings and users in an engaging manner".</div>
+            <div class="subheader-text project-title">Fliehkraft</div>
+            <div class="body-text project-card-text">Participative Digital Fabrication Space in a Refugee Camp.</div>
           </div>
-          <a class="button" href="./project-pages/project-buildingbanter.html">
+          <a class="button" href="./actions/fliehkraft.html">
             <span class="button-text">Read More</span>
             <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
           </a>
         </div>
-        <div class="project-card">
-          <img loading="lazy" src="./assets/images/classic4.jpg" class="project-image">
+
+                <div class="project-card">
+          <img loading="lazy" src="./assets/images/hurricanehackers.jpg" class="project-image">
           <div class="project-card-text-container">
-            <div class="subheader-text project-title">Classic 4</div>
-            <div class="body-text project-card-text">Electro Accupuncture / TENS Device. Classic 4 @ Harmony Medical. Languages: c, cpp, asm, python.</div>
+            <div class="subheader-text project-title">Hurricane Hackers</div>
+            <div class="body-text project-card-text">Remote Disaster Relief and communications to support those affected by Hurricane Sandy</div>
           </div>
-          <a class="button" href="./project-pages/project-classic4.html">
+          <a class="button" href="./projects/hurricanehackers.html">
             <span class="button-text">Read More</span>
             <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
           </a>
         </div>
-        <div class="project-card">
-          <img loading="lazy" src="./assets/images/nanode.png" class="project-image">
-          <div class="project-card-text-container">
-            <div class="subheader-text project-title">Nanode</div>
-            <div class="body-text project-card-text">An open source Arduino-like board that has in-built web connectivity. Best Internet of Things Open Source Project 2011.</div>
-          </div>
-          <a class="button" href="./project-pages/project-nanode.html">
-            <span class="button-text">Read More</span>
-            <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
-          </a>
+
         </div>
-      </div>
     </div>
     <!-- FOOTER -->
     <div id="footer">
