--- a/projects/nanode.html
+++ b/projects/nanode.html
@@ -113,8 +113,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
       <a href="../service/business_development.html">> Business Development</a>
     </div>
   </div>
-  <!-- Use any element to open/show the overlay navigation menu -->
-  <span onclick="openNav()">open</span>
+
   <!-- MAIN PAGE CONTENT -->
   <div id="main-content">
 
@@ -141,16 +140,16 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
         <div class="project-gallery-content">
 
           <div class="gallery-image-container half-width">
-            <img loading="lazy" src="../assets/images/code.jpeg" class="gallery-image">
-            <span class="image-caption">Give your image a caption. People love context.</span>
+            <img loading="lazy" src="../assets/images/nanode_photo.jpg" class="gallery-image">
+            <span class="image-caption">A fully populated nanode board running arduino blink sketch. It lives!</span>
           </div>
           <div class="gallery-image-container half-width">
-            <img loading="lazy" src="../assets/images/sketchbook.jpeg" class="gallery-image">
-            <span class="image-caption">Give your image a caption. People love context.</span>
+            <img loading="lazy" src="../assets/images/Nanode_rgb.jpg" class="gallery-image">
+            <span class="image-caption">An example of running Nanode with the Pachube pub/sub service storing sensor readings and actuating an RGB LED / physical notifier.</span>
           </div>
           <div class="gallery-image-container">
-            <img loading="lazy" src="../assets/images/camera.jpeg" class="gallery-image">
-            <span class="image-caption">Give your image a caption. People love context.</span>
+            <img loading="lazy" src="../assets/images/nanode_red.jpg" class="gallery-image">
+            <span class="image-caption">Another PCB variant, Nanode in red.</span>
           </div>
         </div>
       </div>
