added some more text about nanode

--- a/projects/nanode.html
+++ b/projects/nanode.html
@@ -129,7 +129,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
       <div id="project-details">
         <div class="subheader-text">Project Details / Background</div>
         <div class="project-details-content">
-          <div class="body-text">Nanode is an open source Arduino-like board that has in-built web connectivity. It connects to a range of wireless, wired and ethernet interfaces. It allows you to develop web based sensor and control systems - giving you web access to six analogue sensor lines and six digital I/O lines. It costs under £20 as an easy build it yourself kit. Nanode was designed with Hacking in mind. </div>
+          <div class="body-text">The Nanode project, launched at London hackspace, is an open source Arduino-like board with built-in web connectivity (IoT). It can connect to various wireless, wired, and ethernet interfaces, allowing for the development of web-based sensor and control systems. It provides web access to six analogue sensor lines and six digital I/O lines, making it ideal for hacking projects. The Nanode is affordable, costing under £20 as an easy-to-build kit. It has gained popularity and has been replicated in hackerspaces and workshops across Europe. Additionally, it has been featured on Hackaday, a popular online platform for DIY electronics projects.</div>
         </div>
       </div>
 
