added content to several pages, mainly reprap and fliehkraft and also fixed some asset links for the favicon

--- a/actions/fliehkraft.html
+++ b/actions/fliehkraft.html
@@ -112,8 +112,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
       <a href="../service/business_development.html">> Business Development</a>
     </div>
   </div>
-  <!-- Use any element to open/show the overlay navigation menu -->
-  <span onclick="openNav()">open</span>
+
   <!-- MAIN PAGE CONTENT -->
   <div id="main-content">
 
@@ -139,19 +138,79 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
         <!-- TODO - Change the 'subheader-text' to whatever you want the Gallery section header to say -->
         <div class="subheader-text">Image Gallery</div>
         <div class="project-gallery-content">
+fliehkraft_herbwalk.jpg
+fliehkraft_logo.jpg
+fliehkraft_nettles.jpg
+fliehkraft_spool_holder.jpg
+fliehkraft_wallart.jpg
+fliehkraft_first_print.jpg
 
           <div class="gallery-image-container half-width">
-            <img loading="lazy" src="../assets/images/code.jpeg" class="gallery-image">
-            <span class="image-caption">Give your image a caption. People love context.</span>
+            <img loading="lazy" src="../assets/images/fliehkraft_build1.jpg" class="gallery-image">
+            <span class="image-caption">First day, occupied an unused room and began building a Reprap (in a refugee camp)! With a little help from my friends :)</span>
           </div>
+
           <div class="gallery-image-container half-width">
-            <img loading="lazy" src="../assets/images/sketchbook.jpeg" class="gallery-image">
-            <span class="image-caption">Give your image a caption. People love context.</span>
+            <img loading="lazy" src="../assets/images/fliehkraft_build4.jpg" class="gallery-image">
+            <span class="image-caption">First day, starting room
+            </span>
+          </div> 
+
+          <div class="gallery-image-container half-width">
+            <img loading="lazy" src="../assets/images/fliehkraft_build2.jpg" class="gallery-image">
+            <span class="image-caption">More build photos.</span>
           </div>
+
+          <div class="gallery-image-container half-width">
+            <img loading="lazy" src="../assets/images/fliehkraft_build3.jpg" class="gallery-image">
+            <span class="image-caption">Even more build photos.</span>
+          </div>         
+
+          <div class="gallery-image-container half-width">
+            <img loading="lazy" src="../assets/images/fliehkraft_lab_early.jpg" class="gallery-image">
+            <span class="image-caption">The host organisation and the people at the camp support what we are doing so we got a lab room! Yipi!</span>
+          </div>          
+
+          <div class="gallery-image-container half-width">
+            <img loading="lazy" src="../assets/images/fliehkraft_build5.jpg" class="gallery-image">
+            <span class="image-caption">Measuring before I tighten the nuts against each other on the threaded rod.</span>
+          </div>
+
+          <div class="gallery-image-container half-width">
+            <img loading="lazy" src="../assets/images/fliehkraft_buttons.jpg" class="gallery-image">
+            <span class="image-caption">The printers are working, printing buttons for little (useful) presents / giveaways.</span>
+          </div>          
+
+          <div class="gallery-image-container half-width">
+            <img loading="lazy" src="../assets/images/fliehkraft_callibration.jpg" class="gallery-image">
+            <span class="image-caption">Calibrating the newly built 3D printer.</span>
+          </div>
+
+          <div class="gallery-image-container half-width">
+            <img loading="lazy" src="../assets/images/fliehkraft_printers.jpg" class="gallery-image">
+            <span class="image-caption">2 working repraps and one final build well underway</span>
+          </div>
+
           <div class="gallery-image-container">
-            <img loading="lazy" src="../assets/images/camera.jpeg" class="gallery-image">
-            <span class="image-caption">Give your image a caption. People love context.</span>
+            <img loading="lazy" src="../assets/images/fliehkraft_nettles.jpg" class="gallery-image">
+            <span class="image-caption">Picking nettle leaves (without getting stung)— in Marzahn, Berlin, Germany.</span>
           </div>
+
+          <div class="gallery-image-container">
+            <img loading="lazy" src="../assets/images/fliehkraft_herbwalk.jpg" class="gallery-image">
+            <span class="image-caption">Taking walks in the local neighbourhood with friends from the camp identifying and harvesting local edible and medicinal plants. Clockwise from top: Stinging Nettle, Rocket, Sorrel, St John's Wort, Borage, Large-leaved Lime flowers (commonly known as Linden in Germany), Ribwort Plantain— in Marzahn, Berlin, Germany.</span>
+          </div>
+
+          <div class="gallery-image-container half-width">
+            <img loading="lazy" src="../assets/images/fliehkraft_wildsalad.jpg" class="gallery-image">
+            <span class="image-caption">We made a salad with wild Rucola, Sauerampfer, Rose petals, Spitzwegerich and Nettle (and a little bit cucumber from the supermarket)</span>
+          </div>
+
+          <div class="gallery-image-container half-width">
+            <img loading="lazy" src="../assets/images/fliehkraft_dinner.jpg" class="gallery-image">
+            <span class="image-caption">Eating together with friends from the camp: curry, home-baked bread and hand-picked wild salad— in Marzahn, Berlin, Germany.</span>
+          </div>
+
         </div>
       </div>
     </div>
