--- a/projects/ltfhc.html
+++ b/projects/ltfhc.html
@@ -13,7 +13,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
 <head>
   <meta charset="utf-8">
 
-  <link rel="icon" href="assets/icons/favicon.ico" class="gallery-image">
+  <link rel="icon" href="../assets/icons/favicon.ico" class="gallery-image">
   <span class="image-caption">LTFHC Build Photos</span>
 </div>" />
 <title>Samuel Carlisle BEng (hons) Dunelm MIET</title>
@@ -115,8 +115,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
       <a href="../service/business_development.html">> Business Development</a>
     </div>
   </div>
-  <!-- Use any element to open/show the overlay navigation menu -->
-  <span onclick="openNav()">open</span>
+
   <!-- MAIN PAGE CONTENT -->
   <div id="main-content">
 
