--- a/projects/reprap.html
+++ b/projects/reprap.html
@@ -113,16 +113,17 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
       <a href="../service/business_development.html">> Business Development</a>
     </div>
   </div>
-  <!-- Use any element to open/show the overlay navigation menu -->
-  <span onclick="openNav()">open</span>
+
   <!-- MAIN PAGE CONTENT -->
   <div id="main-content">
 
     <!-- PROJECT HEADER -->
     <div id="project-header">
 
-      <div class="main-title">Project Name</div>
-      <div class="body-text">A small description about the project goes here, get the reader hooked on the project and tell them why they should continue to read this page. Give it a sweet tagline.</div>
+      <div class="main-title">Reprap Opensource 3D Printer</div>
+      <div class="body-text">RepRap is humanity's first general-purpose self-replicating manufacturing machine.
+      <br>
+      RepRap takes the form of a free desktop 3D printer capable of printing plastic objects. Since many parts of RepRap are made from plastic and RepRap prints those parts, RepRap self-replicates by making a kit of itself - a kit that anyone can assemble given time and materials. It also means that - if you've got a RepRap - you can print lots of useful stuff, and you can print another RepRap for a friend...</div>
       <img loading="lazy" class="project-header-image" src="../assets/images/desktop.jpeg">
       </div>
 
