--- a/projects/animachine.html
+++ b/projects/animachine.html
@@ -13,7 +13,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
 <head>
   <meta charset="utf-8">
 
-  <link rel="icon" href="./assets/icons/favicon.ico" />
+  <link rel="icon" href="../assets/icons/favicon.ico" />
   <title>Samuel Carlisle BEng (hons) Dunelm MIET</title>
   <meta name="description" content="A portfolio of the projects I have worked on and their impact, the services I provide, the skills that I have and some of my writings.">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -113,8 +113,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
       <a href="../service/business_development.html">> Business Development</a>
     </div>
   </div>
-  <!-- Use any element to open/show the overlay navigation menu -->
-  <span onclick="openNav()">open</span>
+
   <!-- MAIN PAGE CONTENT -->
   <div id="main-content">
 
